tests/fixtures/functional_patterns/positive/p05_filter_map.rs
fn parse_numbers(items: Vec<String>) -> Vec<i32> {
    items.iter()
        .filter_map(|s| s.parse::<i32>().ok())
        .collect()
}
